src/objects/Group__c.object
<CustomObject>
    <description>SHG</description>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_LO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LO assigned to group</description>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Individual_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Groups (Current Loan Officer)</relationshipLabel>
        <relationshipName>Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Collected__c</fullName>
        <description>Fees Collected</description>
        <inlineHelpText>Fees Collected</inlineHelpText>
        <label>Fees Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Group Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Group External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group Fee Set</description>
        <inlineHelpText>Group Fee Set</inlineHelpText>
        <label>Group Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Group/Individual Registration</relationshipLabel>
        <relationshipName>Group_Individual_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This client is the group leader. The selected client must belong to this group to be assigned as a leader.</inlineHelpText>
        <label>Group Leader</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <label>Group Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_System_ID__c</fullName>
        <description>System Generated Group System ID</description>
        <displayFormat>Group-{0000}</displayFormat>
        <label>Group System ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_number_of_persons__c</fullName>
        <label>Maximum number of persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Schedule</label>
        <referenceTo>Meeting_Schedule__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_number_of_persons__c</fullName>
        <label>Minimum number of persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_Date__c</fullName>
        <label>Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Clients__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to this office</description>
        <inlineHelpText>Linked to this office</inlineHelpText>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Groups__c</fullName>
        <label>Question Groups</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Prades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipurß</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Charged__c</fullName>
        <description>Total Fees Charged</description>
        <inlineHelpText>Total Fees Charged</inlineHelpText>
        <label>Total Fees Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trained_On__c</fullName>
        <label>Trained On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Center__c</columns>
        <columns>Assigned_LO__c</columns>
        <columns>Office__c</columns>
        <columns>City__c</columns>
        <columns>Next_Meeting_Date__c</columns>
        <columns>Last_Meeting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000EAGMA2_00NE0000000G706MAC</fullName>
        <active>true</active>
        <field>Client__c.Group__c</field>
        <filterItems>
            <field>Group__c.Office__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Current_Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Client_Group</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000En3MAE_00NE0000000IBVQMA4</fullName>
        <active>true</active>
        <field>Savings_Account__c.Group__c</field>
        <filterItems>
            <field>Group__c.Group_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Account_Group</name>
    </namedFilters>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Address1_Special_char_check</fullName>
        <active>true</active>
        <description>Address1_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  Address_Line_1__c  , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address2_Special_char_check</fullName>
        <active>true</active>
        <description>Address2_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   Address_2__c   , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_2__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address3_Special_char_check</fullName>
        <active>true</active>
        <description>Address3_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   Address_3__c   , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_3__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Center_Belongs_To_Branch</fullName>
        <active>true</active>
        <errorConditionFormula>(Center__c  &lt;&gt; NULL) &amp;&amp; (Center__r.Branch__r.Id  &lt;&gt;  Office__r.Id)</errorConditionFormula>
        <errorMessage>User entered Center does not belong to this Branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_Special_char_check</fullName>
        <active>true</active>
        <description>City_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   City__c , &quot;^[a-zA-Z\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>City should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExternalID_Special_char_check</fullName>
        <active>true</active>
        <description>ExternalID_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(    External_ID__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>External_ID__c</errorDisplayField>
        <errorMessage>ID should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Telephone_Special_char_check</fullName>
        <active>true</active>
        <description>Telephone_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(     Telephone_No__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Telephone_No__c</errorDisplayField>
        <errorMessage>Telephone no. should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zipcode_check</fullName>
        <active>true</active>
        <description>Zipcode_check</description>
        <errorConditionFormula>NOT(REGEX(  Zipcode__c , &quot;\\d{6}&quot;))</errorConditionFormula>
        <errorDisplayField>Zipcode__c</errorDisplayField>
        <errorMessage>Invalid Zipcode</errorMessage>
    </validationRules>
</CustomObject>